Fix evaluación gratuita
